header contacts style

--- a/index.html
+++ b/index.html
@@ -15,7 +15,38 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.8/dist/vue.js"></script>
 </head>
 <body>
-    
+    <main>
+        <div class="container">
+            <div class="row main_wrapper">
+                <div class="col-4 contact_wrapper">
+                    <div class="header_contacts d-flex justify-content-between">
+                        <figure class="profile_pic d-flex align-content-center">
+                            <img src="./img/01.png" alt="profile pic">
+                            <p id="profile_name">
+                                Elia
+                            </p>
+                        </figure>
+                        <ul class="header_icons d-flex align-items-center">
+                            <li>
+                                <i class="bi bi-circle"></i>
+                            </li>
+                            <li>
+                                <i class="bi bi-chat-left-fill"></i>
+                            </li>
+                            <li>
+                                <i class="bi bi-three-dots-vertical"></i>
+                            </li>
+                        </ul>
+                    </div>
+                    <section class="notifications_wrapper">
+                        
+                    </section>
+                </div>
+                <div class="col flex-grow-1 chat_wrapper">
+                </div>
+            </div>
+        </div>
+    </main>
 
     <script src="./js/main.js"></script>
 </body>
