--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <main>
         <div class="container">
             <div class="row main_wrapper">
-                <div class="col-4 contact_wrapper ">
+                <div class="col-4 contact_wrapper d-flex flex-column">
                     <div class="header_contacts d-flex justify-content-between contacts_padding">
                         <figure class="profile_pic d-flex align-content-center">
                             <img src="./img/01.png" alt="profile pic">
-                            <p id="profile_name">
+                            <p class="profile_name">
                                 Elia
                             </p>
                         </figure>
@@ -58,15 +58,96 @@
                         <input  type="text" name="search" id="search" placeholder="Search contact">
                     </section>
 
-                    <div class="section contact_cards_wrapper">
-                        
+                    <ul class="contact_cards_wrapper d-flex flex-column flex-grow-1">
+                        <li class="contact_card d-flex align-items-start justify-content-start">
+                            <figure class="profile_pic">
+                                <img src="./img/02.png" alt="">
+                            </figure>
+                            <div class="text_card flex-grow-1">
+                                    <p class="profile_name">
+                                        Luis Amstrong
+                                    </p>
+                                    <p class="last_message__text ">
+                                        Ultimo messaggio inviato
+                                    </p>
+                            </div>
+                            <p class="time">
+                                12.30
+                            </p>
+                        </li>
+
+                        <li class="contact_card d-flex align-items-start justify-content-start">
+                            <figure class="profile_pic">
+                                <img src="./img/02.png" alt="">
+                            </figure>
+                            <div class="text_card flex-grow-1">
+                                    <p class="profile_name">
+                                        Luis Amstrong
+                                    </p>
+                                    <p class="last_message__text ">
+                                        Ultimo messaggio inviato
+                                    </p>
+                            </div>
+                            <p class="time">
+                                12.30
+                            </p>
+                        </li>
+
+                        <li class="contact_card d-flex align-items-start justify-content-start">
+                            <figure class="profile_pic">
+                                <img src="./img/02.png" alt="">
+                            </figure>
+                            <div class="text_card flex-grow-1">
+                                    <p class="profile_name">
+                                        Luis Amstrong
+                                    </p>
+                                    <p class="last_message__text ">
+                                        Ultimo messaggio inviato
+                                    </p>
+                            </div>
+                            <p class="time">
+                                12.30
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+
+
+
+                <section class="col flex-grow-1 chat_wrapper d-flex flex-column">
+                    <div class="chat_header d-flex">
+                        <figure class="profile_pic">
+                            <img src="./img/02.png" alt="">
+                        </figure>
+                        <div class="text_card flex-grow-1">
+                            <p class="profile_name">
+                                Luis Amstrong
+                            </p>
+                            <p class="last_access__text ">
+                                Ultimo accesso alle 12.30
+                            </p>
+                        </div>
+                        <ul class="header_icons d-flex align-items-center">
+                            <li>
+                                <i class="bi bi-search"></i>
+                            </li>
+                            <li>
+                                <i class="bi bi-paperclip"></i>
+                            </li>
+                            <li>
+                                <i class="bi bi-three-dots-vertical"></i>
+                            </li>
+                        </ul>
                     </div>
-                </div>
+                    <section class="chat_screen flex-grow-1">
 
-
-
-                <div class="col flex-grow-1 chat_wrapper">
-                </div>
+                    </section>
+                    <section class="chat_toolbar d-flex align-items-center">
+                        <i class="bi bi-emoji-smile"></i>
+                        <input class="flex-grow-1" type="text" name="message" id="message" placeholder="New message">
+                        <i class="bi bi-mic-fill"></i>
+                    </section>
+                </section>
             </div>
         </div>
     </main>
