--- a/index.html
+++ b/index.html
@@ -140,7 +140,22 @@
                         </ul>
                     </div>
                     <section class="chat_screen flex-grow-1">
-
+                        <ul class="row message_list flex-column">
+                            <li class="col-5 message sent">
+                                <div>
+                                    Ciao, come stai?
+                                </div>
+                                <div class="time">
+                                    12.30
+                                </div>
+                            </li>
+                            <li class="col-5 message recived">
+                                Tutto bene, tu?
+                                <div class="time">
+                                    12.30
+                                </div>
+                            </li>
+                        </ul>
                     </section>
                     <section class="chat_toolbar d-flex align-items-center">
                         <i class="bi bi-emoji-smile"></i>
